Fix: OPTIONS 인증 오류 해결